--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "singleQuote": true
   },
   "devDependencies": {
+    "@playwright/test": "^1.57.0",
     "jest": "^29.3.1",
     "nodemon": "^2.0.20",
+    "playwright": "^1.57.0",
     "prettier": "^2.7.1"
   }
 }
