Add TypeScript support, refactor SQLite tests, and implement CRUD operations with Express

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "101-app",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/index.ts",
   "license": "MIT",
   "scripts": {
-    "prettify": "prettier -l --write \"**/*.js\"",
+    "prettify": "prettier -l --write \"**/*.{js,ts}\"",
     "test": "jest",
-    "dev": "nodemon -L src/index.js"
+    "dev": "nodemon -L --exec ts-node src/index.ts"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -27,9 +27,15 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
+    "@types/express": "^5.0.6",
+    "@types/node": "^25.3.0",
+    "@types/uuid": "^10.0.0",
     "jest": "^29.3.1",
     "nodemon": "^2.0.20",
     "playwright": "^1.57.0",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "ts-jest": "^29.4.6",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
