add esLint + config

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "prettify": "prettier -l --write \"**/*.{js,ts}\"",
     "test": "jest",
-    "dev": "nodemon -L --exec ts-node src/index.ts"
+    "dev": "nodemon -L --exec ts-node src/index.ts",
+    "lint": "eslint src/static/js/components src/persistence src/routes src/controllers"
   },
   "dependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -30,16 +31,23 @@
     "singleQuote": true
   },
   "devDependencies": {
+    "@eslint/js": "^10.0.1",
     "@playwright/test": "^1.58.2",
     "@types/express": "^5.0.6",
     "@types/node": "^25.3.0",
     "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.56.0",
+    "@typescript-eslint/parser": "^8.56.0",
+    "eslint": "^10.0.1",
+    "eslint-config-prettier": "^10.1.8",
+    "globals": "^17.3.0",
     "jest": "^30.2.0",
     "nodemon": "^3.1.14",
     "playwright": "^1.57.0",
     "prettier": "^3.8.1",
     "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.56.0"
   }
 }
