update logique users + tests auth

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,8 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - .:/app
-      - /app/node_modules
-    environment:
-      - NODE_ENV=development
-    command: npm run dev
-    depends_on: []
+      - ./src:/app/src
+      - ./src/static:/app/src/static
 
 volumes:
   mysql-data:
